# phred

./: AUDIT  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Minerva-Performance.xls  Minerva-results.xls  README  README.Glacier  README.IRIX  README.NEC.SX-6  TODO  acinclude.m4  aminclude.am  config.h.in  configure.in  phred.spec  phred.spec.in  svn-commit.tmp
PyLibrary/: Drude.py  Johnson_Christy_gold.data  Johnson_Christy_silver.data  README  domain_decomp.py  fit_drude.py  gen_documentation.py
PyLibrary/PhredLib/: Plots.py  Waveguide.py  __init__.py
Results/: Minerva-Performance.xls  Minerva-class-comparison.xls  Minerva-results2.xls  OpenMP-results.xls  OpenMP_results.txt
autom4te.cache/: output.0  requests  traces.0
doc/: Doxyfile.in  Makefile.am  phred.1  phred.lsm  phred.lsm.in  phred.texinfo
doc/papers/biblio/: enhtrans.bib  phred.bib  sw.bib
doc/papers/hawaii2005/: hawaii2005.tex
doc/presentations/parallization/: datawriter-classes.eps  datawriter-classes.fig  domain-decomp.eps  domain-decomp.fig  fdtd-classes.eps  fdtd-classes.fig  grid-classes.eps  grid-classes.fig  jan-memory.eps  jan-memory.fig  make-slides.sh  minerva-sp.eps  mpi-datatypes.eps  mpi-datatypes.fig  phred-memory.eps  phred-memory.fig  realtime-5m.eps  realtime.eps  slides.tex  speedup-5m.eps  speedup.eps  yee-cell.eps  yee-cell.fig
minerva/: 1n_1t.txt  1n_2t.txt  1n_3t.txt  1n_4t.txt  1n_5t.txt  1n_6t.txt  1n_7t.txt  1n_8t.txt  2n_1t.txt  3n_1t.txt  4n_1t.txt  6n_1t.txt  8n_1t.txt  hscfdtd.txt  onenode.txt  phred.txt  serial.txt
src/: AltiVec.hh  AsciiDataWriter.cc  AsciiDataWriter.hh  BartlettExcitation.hh  Block.cc  Block.hh  BlockResult.cc  BlockResult.hh  BlockTiling.hh  BoundaryCondition.cc  BoundaryCondition.hh  Box.cc  Box.hh  CellSet.hh  Checkpoint.hh  Constants.hh  Contiguous.hh  DFTResult.cc  DFTResult.hh  Data.hh  DataWriter.cc  DataWriter.hh  Ewall.cc  Ewall.hh  Exceptions.hh  Excitation.cc  Excitation.hh  ExpSine.cc  FDTD.cc  FDTD.hh  FarfieldResult.cc  FarfieldResult.hh  FreqGrid.cc  FreqGrid.hh  Gaussm.cc  Gaussm.hh  Geometry.cc  Geometry.hh  Globals.hh  Grid.cc  (+103 more)
src/Boundaries/: BoundaryCondition.cc  BoundaryCondition.hh  Ewall.cc  Ewall.hh  GPml.cc  GPml.hh  Hwall.cc  Hwall.hh  Makefile.am  Periodic.cc  Periodic.hh  Pml.cc  Pml.hh  PmlCommon.cc  PmlCommon.hh  SubdomainBc.cc  SubdomainBc.hh  UPml.cc  UPml.hh  UPmlCommon.cc  UPmlCommon.hh
src/CSG/: CSGArray.cc  CSGArray.hh  CSGBox.cc  CSGBox.hh  CSGBox.hh~  CSGCone.hh  CSGCylinder.cc  CSGCylinder.hh  CSGDifference.cc  CSGDifference.hh  CSGIntersection.cc  CSGIntersection.hh  CSGObject.hh  CSGOperator.cc  CSGOperator.hh  CSGOperator.hh~  CSGPrimitive.cc  CSGPrimitive.hh  CSGSphere.cc  CSGSphere.hh  CSGTransform.cc  CSGTransform.hh  CSGTransform.hh~  CSGUnion.cc  CSGUnion.hh  Makefile.am
src/DataWriters/: AsciiDataWriter.cc  AsciiDataWriter.hh  DataWriter.cc  DataWriter.hh  Hdf5DataWriter.hh  HdfDataWriter.hh  Makefile.am  MatlabDataWriter.cc  MatlabDataWriter.hh  NetCDFDataWriter.cc  NetCDFDataWriter.hh  PyDataWriter.cc  PyDataWriter.hh  VtkDataWriter.cc  VtkDataWriter.hh
src/Excitations/: BartlettExcitation.cc  BartlettExcitation.hh  Excitation.cc  Excitation.hh  GaussWindExcitation.cc  GaussWindExcitation.hh  Makefile.am  PeriodicExcitation.cc  PeriodicExcitation.hh  TotalScattered.cc  TotalScattered.hh  WaveguideExcitation.cc  WaveguideExcitation.hh  WindowedExcitation.cc  WindowedExcitation.hh
src/Performance/: GridUpdate.cc  Makefile.am  README
src/PythonBindings/: Makefile.am  PyBoundaries.cc  PyCSG.cc  PyDatawriters.cc  PyExcitations.cc  PyFDTD.cc  PyFDTD.hh  PyGeometry.cc  PyGeometry.hh  PyGrid.cc  PyGrid.hh  PyInterpreter.cc  PyInterpreter.hh  PyMaterial.cc  PyResults.cc  PyResults.hh  PyTypes.cc
src/Results/: AvgPowerResult.cc  AvgPowerResult.hh  BlockResult.cc  BlockResult.hh  DFTResult.cc  DFTResult.hh  FakeResult.cc  FakeResult.hh  FarfieldResult.cc  FarfieldResult.hh  FarfieldResult2.cc  FarfieldResult2.hh  GridResult.cc  GridResult.hh  Makefile.am  PlaneResult.cc  PlaneResult.hh  PointDFTResult.cc  PointDFTResult.hh  PointResult.cc  PointResult.hh  PowerResult.cc  PowerResult.hh  PropertiesResult.cc  PropertiesResult.hh  Result.hh  SignalDFTResult.cc  SignalDFTResult.hh  SignalTimeResult.cc  SignalTimeResult.hh  SourceDFTResult.cc  SourceDFTResult.hh  SourceTimeResult.cc  SourceTimeResult.hh  SurfaceCurrentResult.cc  SurfaceCurrentResult.hh  WindowedExResult.cc  WindowedExResult.hh
src/Signals/: DiffGaussPulse.cc  DiffGaussPulse.hh  ExpSine.cc  ExpSine.hh  GaussPulse.cc  GaussPulse.hh  Gaussm.cc  Gaussm.hh  Makefile.am  Signal.hh  SignalFunction.hh
src/Sources/: ExpSine.cc  ExpSine.hh  Gaussm.cc  Gaussm.hh  Makefile.am  SourceFunction.hh
src/python/: brtest.py  hole.py  mpitest.py  pmltest.py  pmltest2.py  upmltest.py  waveguide.py
src/python-bindings/: Makefile.am  PyBoundaries.cc  PyBoundaries.hh  PyDatawriters.cc  PyDatawriters.hh  PyExcitations.cc  PyExcitations.hh  PyFDTD.cc  PyFDTD.hh  PyGrid.cc  PyGrid.hh  PyInterpreter.cc  PyInterpreter.hh  PyMaterial.hh  PyResults.cc  PyResults.hh  PyTypes.hh  __init__.py
tests/: Makefile.am  alg.m  aperture_coupler.m  gausstest.m
tests/1d-plasma/: gauss.m  gaussm.m  one_d_fdtd.m  point_dft.m  update_ex.m  update_hy.m
tests/alg prototypes/: alg.m  nonlinear_opt.m
tests/benchmarks/: Makefile.am  README  graph_bandwidth.py  mpi-derived.cc  mpi-manual.cc  mpi-nopack.cc  mpi-simple.cc  mpi-topo.cc
tests/boost.python/: Makefile.am  boosttest.cc
tests/boost.spirit/: Makefile.am  test1.cc
tests/boost.ublas/: ublas1.cc
tests/high_speed_c/: Makefile.am  altivec_update.c  cache_update.c  combined_simple_mat_update.c  combined_update.c  common.h  high_speed.c  openmp_update.c  restrict_update.c  simple_update.c
tests/matlab/: dpoint.m  nonlincon.m  point.m
tests/mpi_dt_tests/: .gdb_history  a.out  indexed.cc
tests/netcdf/: .gdb_history  test  test.cc
