noinst_LIBRARIES=libboundaries.a

libboundaries_a_SOURCES = BoundaryCondition.hh \
	BoundaryCondition.cc \
	Hwall.hh \
	Hwall.cc \
	Pml.hh \
	Pml.cc \
	PmlCommon.hh \
	PmlCommon.cc \
	UPml.hh \
	UPml.cc \
	UPmlCommon.hh \
	UPmlCommon.cc \
	SubdomainBc.hh \
	SubdomainBc.cc \
	Ewall.hh \
	Ewall.cc \
	GPml.hh \
	GPml.cc

libboundaries_a_LIBADD = $(TEMPLATE_OBJS)
