noinst_LIBRARIES=libcsg.a

libcsg_a_SOURCES = CSGObject.hh \
	CSGOperator.hh \
	CSGBox.hh \
	CSGSphere.hh \
	CSGCylinder.hh \
	CSGCone.hh \
	CSGTransform.hh \
	CSGUnion.hh \
	CSGDifference.hh \
	CSGIntersection.hh \
	CSGObject.cc \
	CSGOperator.cc \
	CSGBox.cc \
	CSGSphere.cc \
	CSGCylinder.cc \
	CSGCone.cc \
	CSGTransform.cc \
	CSGUnion.cc \
	CSGDifference.cc \
	CSGIntersection.cc
