noinst_LIBRARIES=libcsg.a

libcsg_a_SOURCES = CSGObject.hh \
	CSGPrimitive.hh \
	CSGOperator.hh \
	CSGBox.hh \
	CSGSphere.hh \
	CSGCylinder.hh \
	CSGCone.hh \
	CSGTransform.hh \
	CSGUnion.hh \
	CSGDifference.hh \
	CSGIntersection.hh \
	CSGPrimitive.cc \
	CSGBox.cc \
	CSGSphere.cc \
	CSGCylinder.cc \
	CSGDifference.cc \
	CSGUnion.cc \
	CSGIntersection.cc
#	CSGCone.cc \
	CSGTransform.cc \
#	CSGObject.cc 


